tests/should_fail/vla.c
// DEFS A

#ifdef A
void f(const int n, int arr[n = 2]);
#endif

int main() {}
